@@ -46,6 +46,10 @@ duplicate ECMs, 4 = packet debug. 5 = packet debug + mpeg ts packet
 dump.
 Setting higher level enables the levels bellow.
 .TP
+\fB\-b\fR, \fB\-\-bench\fR
+Bechmark libdvbcsa decryption. The benchmark is single threaded.
+If you want to fully test your CPU, run couple of tsdecrypts in parallel.
+.TP
 \fB\-V\fR, \fB\-\-version\fR
 Show program version.
 .TP
